# logic-simulation

./: CMakeLists.txt  count-lines.py  install.sh  install_dependencies.sh  test_simple
include/: Renderer.hpp  camera.hpp  component.hpp  componentSystem.hpp  constants.hpp  gpuBuffer.hpp  indexBuffer.hpp  initializer.hpp  inputMethods.hpp  instancedComponents.hpp  keyBindings.hpp  openglPCH.hpp  renderer.hpp  renderer_constants.hpp  shaderType.hpp  textureLoader.hpp  textureRenderer.hpp  utils.hpp  vertexBuffer.hpp
include/common/: 3dUtils.hpp  arrayUtils.hpp  componentStructs.hpp  constants.hpp  gl.h  glad.h  gpuBuffer.hpp  initializer.hpp  shaderLoader.hpp  textureLoader.hpp  utils.hpp
scripts/: build_and_run.sh  clean_build_and_run.sh  debug_build.sh  delete_cmake_files.sh
shaders/: debug.shader  renderInstancedMesh.shader  renderSelectedWorldTexture.shader  renderTexture.shader  renderUniqueMesh.shader  renderWorldTexture.shader
src/: Renderer.cpp  camera.cpp  component.cpp  componentSystem.cpp  componentTester.cpp  inputMethods.cpp  instancedComponents.cpp  main.cpp  renderer.cpp  textureRenderer.cpp
src/common/: 3dUtils.cpp  gl.c  glad.c  gpuBuffer.cpp  indexBuffer.cpp  initializer.cpp  shaderLoader.cpp  textureLoader.cpp  textureRenderer.cpp  utils.cpp  vertexBuffer.cpp
